--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,10 +227,13 @@ nav{
   top: 0;
   z-index: 100;
 }
+.navbar-brand img{
+  width: 65px;
+}
 /* Logo pada mode mobile */
 @media screen and (max-width: 1024px) {
   .navbar-brand img{
-    width: 65px;
+    width: 50px;
   }
 }
 @media (max-width: 1024px) {
@@ -745,6 +748,8 @@ nav a.active{
 footer p{
   font-size: 12px !important;
   letter-spacing: 1.5px;
+  padding-right: 3rem;
+  text-align: justify;
 }
 @media screen and (max-width: 767px) {
   footer h1 {
@@ -752,6 +757,8 @@ footer p{
   }
   footer p {
     font-size: 0.5rem!important;
+    padding-right: 0rem;
+    text-align: center;
   }
 }
 
@@ -881,7 +888,7 @@ footer .social-media a:hover i{
   /* font-family: "Source Serif Pro"; */
   font-size: 30px;
   font-weight: 1000;
-  margin-bottom: 20px;
+  padding-bottom: 20px!important;
   /* line-height: 25px; */
 }
 .judul{
