--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ header.journal{
 }
 
 header.portfolios{
-  background-image: linear-gradient(#00000065, #00000000), url(https://iluminen.com/wp-content/uploads/2021/03/hotel-indonesia-kempinski-jakarta-indonesia-vinsy-dandy-wedding-iluminen-bali-photography-junebug-photobug-dirtybootsmessyhair-destination-photographer001-scaled-1.jpg);
+  background-image: linear-gradient(#00000065, #00000000), url(../img/LEC08603.jpg);
 }
 
 span, p{
