--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,7 +495,7 @@ nav a.active{
   position: relative;
   height: 480px;
   background-image:
-  linear-gradient(#2b262384,#2b262384),url(https://iluminen.com/wp-content/uploads/2023/02/AVW_0466322-scaled.jpg);
+  linear-gradient(#2b262384,#2b262384),url(../img/prewedding.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
