--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,8 +494,8 @@ nav a.active{
 .portfolio-item{
   position: relative;
   height: 480px;
-  background-image:
-  linear-gradient(#2b262384,#2b262384),url(../img/prewed_cover.jpg);
+  /* background-image:
+  linear-gradient(#2b262384,#2b262384),url(../img/prewed_cover.jpg); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -679,7 +679,7 @@ nav a.active{
 }
 
 .portfolio-details-gallery{
-  width: 50%;
+  width: 70%;
 }
 #portfolio-image{
   padding: 0.25rem 0 0.25rem 0;
